--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ build:
   steps:
    - uses: actions/checkout@v2
 
-   - name: Run markdown lint
+   - name: Run markdown lint test
      run: |
           npm install remark-cli remark-preset-lint-consistent
           npx remark . --use remark-preset-lint-consistent --frail
